--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -9,6 +9,12 @@ RUN apt-get update && apt-get install -y sudo procps net-tools less vim curl ttf
 # set timezone
 RUN echo "Asia/Shanghai" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
+# Set the locale
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
 
 # install elasticsearch
 
@@ -19,8 +25,6 @@ RUN dpkg -i /opt/program/elasticsearch-5.0.0.deb && \
 
 
 # config
-
-
 
 
 # environment
